# CongressionalTrading

./: .env.example  .gitignore  BOUNTY.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: architecture.md  cost-analysis.md  demo-guide.md  deployment.md
docs/plans/: 2026-03-01-dashboard-charts-design.md
src/congressional_trading/: config.py  main.py
src/congressional_trading/api/: chart_routes.py  routes.py
src/congressional_trading/db/: database.py  models.py  queries.py
src/congressional_trading/parser/: __init__.py  patterns.py  ptr_parser.py  xml_index.py
src/congressional_trading/scraper/: downloader.py  scheduler.py
src/congressional_trading/services/: price_service.py
static/: dashboard.html
tests/: test_api.py  test_parser.py  test_scraper.py  test_validation.py
tests/fixtures/: 20024277.txt  20024800.txt  20024901.txt  20025000.txt  20033928.txt
tests/unit/: test_parser.py
