[project]
name = "congressional-trading"
version = "0.1.0"
description = "Congressional trading disclosure scraper and REST API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "apscheduler>=3.10,<4",
    "pydantic>=2.0",
    "slowapi>=0.1.9",
    "lxml>=5.0",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/congressional_trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]
