[project]
name = "congressional-trading"
version = "0.1.0"
description = "Congressional trading disclosure scraper and REST API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ivan Ma" }]
requires-python = ">=3.12"
keywords = ["congress", "trading", "financial-disclosure", "stock-act", "politics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "apscheduler>=3.10,<4",
    "pydantic>=2.0",
    "slowapi>=0.1.9",
    "lxml>=5.0",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/ivanma9/CongressionalTrading"
Repository = "https://github.com/ivanma9/CongressionalTrading"
"Bug Tracker" = "https://github.com/ivanma9/CongressionalTrading/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/congressional_trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]
